--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+
+h1, h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+}
+
+p, a {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
 .container {
     display: flex;
     flex-direction: column;
